--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <footer>
-        <p>&copy; github.com/yutotesting</p>
+        <a href="http://github.com/yutotesting" target="_blank"><p>&copy; github.com/yutotesting</p></a>
     </footer>
 
     <script src="script.js"></script>
